@@ -2,6 +2,7 @@
 // This file is part of the aMule Project
 //
 // Copyright (c) 2005 aMule Project ( http://www.amule.org )
+// Copyright (C) 2004-2005 Marcelo Jimenez (phoenix@amule.org)
 //
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -18,24 +19,23 @@
 // Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 //
 
-
 #include "StateMachine.h"
 
-
 #include "StringFunctions.h"
-
 
 StateMachine::StateMachine(
 		const wxString &name,
 		const unsigned int max_states,
 		const t_sm_state initial_state )
 :
+m_state_mutex(wxMUTEX_RECURSIVE),
+m_queue_mutex(wxMUTEX_RECURSIVE),
 m_name(name),
 m_max_states(max_states),
-m_initial_state(initial_state),
-m_clock_counter(0)
+m_initial_state(initial_state)
 {
 	m_state = initial_state;
+	m_clock_counter = 0;
 	m_clocks_in_current_state = 0;
 }
 
@@ -58,6 +58,9 @@ void StateMachine::Clock()
 	} else {
 		event = 0;
 	}
+	
+	/* State changes can only happen here */
+	wxMutexLocker lock(m_state_mutex);
 	m_state = next_state( event );
 
 //#if 0
@@ -70,18 +73,23 @@ void StateMachine::Clock()
 		printf( "%s(%04d): %d -> %d\n",
 			unicode2char(m_name), m_clock_counter, old_state, m_state);
 	}
-	m_clocks_in_current_state++;
+	++m_clocks_in_current_state;
 //#endif
 
 	/* Process new state entry */
 	if( m_state < m_max_states )
 	{
+		/* It should be ok to call Clock() recursively inside this
+		 * procedure because state change has already happened. Also
+		 * the m_state mutex is recursive. */
 		process_state(m_state, state_entry);
 	}
 }
 
+/* In multithreaded implementations, this must be locked */
 void StateMachine::Schedule(t_sm_event event)
 {
+	wxMutexLocker lock(m_queue_mutex);
 	m_queue.push(event);
 }
 
